Ensure onboarding text is always visible (#770)

--- a/src/routes/habitat/components/Onboarding/MobileModal/style.scss
+++ b/src/routes/habitat/components/Onboarding/MobileModal/style.scss
@@ -53,7 +53,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 50px;
 
       img {
         width: 100%;
@@ -62,14 +61,7 @@
       > span {
         margin-top: 40px;
       }
-
-      .step {
-        color: var(--grey);
-        padding: 0 20px;
-        font-size: 12px;
-        font-weight: bold;
-      }
-
+      
       .blue {
         color: var(--logoBlue);
       }
